--- a/main.css
+++ b/main.css
@@ -1,12 +1,49 @@
+html {
+    height: 100% !important;
+}
+
 body {
     display: flex;
     flex-direction: column;
     background-color: #faebd7;
     color: #cd853f;
-    height: 100vh !important;
+    height: 100% !important;
     align-items: center;
     padding: 0px !important;
     margin: 0px !important;
+    overflow: hidden !important;
+    line-height: 0px !important;
+}
+
+.shlok {
+    margin-bottom: 20px !important;
+    line-height: 1rem !important;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    width: 100%;
+}
+
+.shlok .center {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex: 1;
+}
+
+.shlok .side {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex: 1;
+}
+
+.shlok .side p {
+    font-size: 3rem !important;
+    height: 100%;
+    margin: 0px !important;
+    align-items: center;
+    display: flex;
 }
 
 main {
@@ -85,6 +122,31 @@ h1 {
     font-style: italic;
 }
 
+.devanagari-regular {
+    font-family: "Tiro Devanagari Marathi", serif;
+    font-weight: 400;
+    font-style: normal;
+}
+
+.devanagari-regular-italic {
+    font-family: "Tiro Devanagari Marathi", serif;
+    font-weight: 400;
+    font-style: italic;
+}
+
+
+.when {
+    order: 1;
+}
+
+.decor {
+    order: 2;
+}
+
+.where {
+    order: 3;
+}
+
 @media screen and (max-width: 660px) {
     h1 {
         font-size: 50px !important;
@@ -96,6 +158,26 @@ h1 {
 
     .details * {
         line-height: 0.5rem !important;
+    }
+
+    .decor {
+        order: 1;
+    }
+
+    .when {
+        order: 2;
+    }
+
+    .where {
+        order: 3;
+    }
+
+    .shlok .side p {
+        font-size: 2rem !important;
+    }
+
+    .shlok .center {
+        flex: 3 !important;
     }
 }
 
@@ -110,5 +192,25 @@ h1 {
 
     .details * {
         line-height: 0.5rem !important;
+    }
+
+    .decor {
+        order: 1;
+    }
+
+    .when {
+        order: 2;
+    }
+
+    .where {
+        order: 3;
+    }
+
+    .shlok .side p {
+        font-size: 2rem !important;
+    }
+
+    .shlok .center {
+        flex: 3 !important;
     }
 }
