--- a/main.css
+++ b/main.css
@@ -179,6 +179,10 @@ h1 {
     .shlok .center {
         flex: 3 !important;
     }
+
+    .shlok {
+        font-size: 0.8rem !important;
+    }
 }
 
 @media screen and (max-width: 410px) {
